--- a/index.html
+++ b/index.html
@@ -352,11 +352,11 @@
         <div class="about-us">
           <div class="team-levelup">
             <h2>OUR TEAM</h2>
-            <p>Abrate Francesco</p>
-            <p>Eloise Bryony Giorda</p>
-            <p>Davide Murroni</p>
-            <p>Giampietro Piras</p>
-            <p>Federico Luciano Stroppiana</p>
+            <p><a href="https://github.com/furenshi" target="_blank">Abrate Francesco</a></p>
+            <p><a href="https://github.com/EloiseBGiorda" target="_blank">Eloise Bryony Giorda</a></p>
+            <p><a href="https://github.com/dmurro" target="_blank">Davide Murroni</a></p>
+            <p><a href="https://github.com/KelosDev" target="_blank">Giampietro Piras</a></p>
+            <p><a href="https://github.com/FedericoStroppiana" target="_blank">Federico Luciano Stroppiana</a></p>
           </div>
 
           <div class="copy">&copy; LevelUp</div>
