added style to footer

--- a/tournaments.html
+++ b/tournaments.html
@@ -162,22 +162,31 @@
 <footer>
     <div class="footer-container">
         <div class="social-links">
-
             <ul>
-                <li><a href="https://twitter.com/ValorantEsports" target="_blank"><img
-                            src="./Contents/img/articles img/twitter.png" alt="twitter"></a></li>
-                <li> <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank"> <img
-                            src="./Contents/img/articles img/youtube.png" alt="youtube"></a></li>
-                <li><a href="https://www.instagram.com/valorantesports/" target="_blank"><img
-                            src="./Contents/img/articles img/instagram.png" alt="instagram"></a></li>
-                <li><a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
-                            src="./Contents/img/articles img/facebook.png" alt="facebook"></a></li>
+                <li>
+                    <a href="https://twitter.com/ValorantEsports" target="_blank"><img
+                            src="./Contents/img/articles img/twitter.png" alt="twitter" /></a>
+                </li>
+                <li>
+                    <a href="https://www.youtube.com/channel/UCA1d3HFGFUmkKr2JIUA5Vlw" target="_blank">
+                        <img src="./Contents/img/articles img/youtube.png" alt="youtube" /></a>
+                </li>
+                <li>
+                    <a href="https://www.instagram.com/valorantesports/" target="_blank"><img
+                            src="./Contents/img/articles img/instagram.png" alt="instagram" /></a>
+                </li>
+                <li>
+                    <a href="https://www.facebook.com/ValorantEsports/" target="_blank"><img
+                            src="./Contents/img/articles img/facebook.png" alt="facebook" /></a>
+                </li>
             </ul>
         </div>
 
         <div class="footer-logo">
-            <h1><span>LevelUp</span><span class="valorant-footer-text">VALORANT</span><span
-                    id="esport-footer">ESPORT</span></h1>
+            <h1>
+                <span>LevelUp</span><span class="valorant-footer-text">VALORANT</span><span
+                    id="esport-footer">ESPORT</span>
+            </h1>
         </div>
 
         <div class="bottom-footer">
@@ -192,29 +201,25 @@
         </div>
 
         <div class="about-us">
-
             <div class="team-levelup">
                 <h2>OUR TEAM</h2>
-                <p>Abrate Francesco</p>
-                <p>Eloise Bryony Giorda</p>
-                <p>Davide Murroni</p>
-                <p>Giampietro Piras</p>
-                <p>Federico Luciano Stroppiana</p>
-
+                <p><a href="https://github.com/furenshi" target="_blank">Abrate Francesco</a></p>
+                <p><a href="https://github.com/EloiseBGiorda" target="_blank">Eloise Bryony Giorda</a></p>
+                <p><a href="https://github.com/dmurro" target="_blank">Davide Murroni</a></p>
+                <p><a href="https://github.com/KelosDev" target="_blank">Giampietro Piras</a></p>
+                <p><a href="https://github.com/FedericoStroppiana" target="_blank">Federico Luciano Stroppiana</a></p>
             </div>
 
-            <div class="copy">&copy; LevelUp </div>
+            <div class="copy">&copy; LevelUp</div>
 
             <div class="contacts">
                 <ul>
                     <li>Email: levelup@mail.com</li>
                     <li>Phone: 333-444-5555</li>
-                    <li>City: Italy, Piedmont, Turin 10138 </li>
+                    <li>City: Italy, Piedmont, Turin 10138</li>
                 </ul>
             </div>
         </div>
-
-
     </div>
 </footer>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script> <!-- Jquery -->
