--- a/tournaments.html
+++ b/tournaments.html
@@ -54,106 +54,124 @@
     viewports-->
 
     <!--Contenuto di prova, layout utilizzabile-->
+    <img src="./Contents/img/Dev_Blog_5_VAL_esports_graphic_rev.jpeg" alt="Esport" class="img-header">
     <h2 class="tournaments-header">Tournaments</h2>
+
     <h3 class="tournaments-sub-header">ongoing events</h3>
 
 
 
+
+
+
     <div class="containercards">
 
+        <a href="https://www.vlr.gg/event/800/champions-tour-north-america-stage-2-challengers" >
+            <div class="trophy-card">
+                <img src="Contents/img/trophies-logos/logo-trophy-1.png" class="gamingtrophy" alt="trophy">
+                <h4 class="trophy-title">Trophy 1</h4>
 
-        <div class="trophy-card">
-            <img src="Contents/img/trophies-logos/logo-trophy-1.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 1</h4>
+                <h5>Region : Usa</h5>
+                <h5>Prize Pool: <br> $200,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6>Apr 28 - Jun 27</h6>
+                <p>Champions Tour North America Stage 2: Challengers</p>
+            </div>
+        </a>
+        <a href="https://www.vlr.gg/event/987/valorant-regional-league-dach-evolution-stage-2">
+            <div class="trophy-card">
+                <img src="Contents/img/trophies-logos/logo-trophy-2.png" class="gamingtrophy" alt="trophy">
+                <h4 class="trophy-title">Trophy 2</h4>
 
-            <h5>Region : Usa</h5>
-            <h5>Prize Pool: <br> $200,000 USD</h5>
-            <h5> Dates:</h5>
-            <h6>Apr 28 - Jun 27</h6>
-            <p>Champions Tour North America Stage 2: Challengers</p>
-        </div>
-        <div class="trophy-card">
-            <img src="Contents/img/trophies-logos/logo-trophy-2.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 2</h4>
-
-            <h5>Region : EU</h5>
-            <h5>Prize Pool: <br> $26,000 USD</h5>
-            <h5> Dates:</h5>
-            <h6>May 9 - Jul 3</h6>
-            <p>Valorant Regional League DACH: Evolution - Stage 2</p>
-        </div>
-
+                <h5>Region : EU</h5>
+                <h5>Prize Pool: <br> $26,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6>May 9 - Jul 3</h6>
+                <p>Valorant Regional League DACH: Evolution - Stage 2</p>
+            </div>
+        </a>
 
 
-        <div class="trophy-card">
-            <img src="Contents/img/trophies-logos/logo-trophy-3.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 3</h4>
-            <h5>Region : Turkey</h5>
-            <h5>Prize Pool: <br> $6,000 USD</h5>
-            <h5> Dates:</h5>
-            <h6>Apr 25 - Jun 1</h6>
-            <p>Valorant Regional League Turkey: Birlik - Stage 2</p>
-        </div>
+        <a href="https://www.vlr.gg/event/981/valorant-regional-league-turkey-birlik-stage-2">
+            <div class="trophy-card">
+                <img src="Contents/img/trophies-logos/logo-trophy-3.png" class="gamingtrophy" alt="trophy">
+                <h4 class="trophy-title">Trophy 3</h4>
+                <h5>Region : Turkey</h5>
+                <h5>Prize Pool: <br> $6,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6>Apr 25 - Jun 1</h6>
+                <p>Valorant Regional League Turkey: Birlik - Stage 2</p>
+            </div>
+        </a>
 
-        <div class="trophy-card">
-            <img src="Contents/img/trophies-logos/logo-trophy-4.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 1</h4>
-            <h5>Region : Spain</h5>
-            <h5>Prize Pool: <br> $6,000 USD</h5>
-            <h5> Dates:</h5>
-            <h6>May 9 - Jul 3</h6>
-            <p>Valorant Regional League Turkey: Birlik - Stage 2</p>
-        </div>
-        <div class="trophy-card">
+        <a href="https://www.vlr.gg/event/993/valorant-regional-league-spain-rising-stage-2">
+            <div class="trophy-card">
+                <img src="Contents/img/trophies-logos/logo-trophy-4.png" class="gamingtrophy" alt="trophy">
+                <h4 class="trophy-title">Trophy 4</h4>
+                <h5>Region : Spain</h5>
+                <h5>Prize Pool: <br> $6,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6>May 11 - Jul 4</h6>
+                <p>Valorant Regional League Spain: Rising - Stage 2</p>
+            </div>
+        </a>
+        <a href="https://www.vlr.gg/event/985/valorant-regional-league-northern-europe-polaris-stage-2">
+            <div class="trophy-card">
 
-            <img src="Contents/img/trophies-logos/logo-trophy-5.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 1</h4>
-            <h5>City : Milan</h5>
-            <h5> Date: 21/7/22</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis aliquam temporibus id odio qui
-                dolorum veniam nemo mollitia quaerat nostrum dignissimos voluptatem nesciunt doloribus, dolore eligendi
-                similique fugit animi!</p>
-        </div>
-        <div class="trophy-card">
+                <img src="Contents/img/trophies-logos/logo-trophy-5.png" class="gamingtrophy" alt="trophy">
+                <h4 class="trophy-title">Trophy 5</h4>
+                <h5>Region : EU</h5>
+                <h5>Prize Pool: <br> $21,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6>Apr 27 - Jul 3</h6>
+                <p>Valorant Regional League Northern Europe: Polaris - Stage 2</p>
+            </div>
+        </a>
+        <a href="https://www.vlr.gg/event/1002/valorant-regional-league-east-surge-stage-2">
+            <div class="trophy-card">
 
-            <img src="Contents/img/trophies-logos/logo-trophy-6.png" class="gamingtrophy" alt="trophy">
-            <h4 class="trophy-title">Trophy 1</h4>
-            <h5>City : Milan</h5>
-            <h5> Date: 21/7/22</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis aliquam temporibus id odio qui
-                dolorum veniam nemo mollitia quaerat nostrum dignissimos voluptatem nesciunt doloribus, dolore eligendi
-                similique fugit animi!</p>
-        </div>
+                <img src="Contents/img/trophies-logos/logo-trophy-6.png" class="gamingtrophy" alt="trophy">
+                <h4 class="trophy-title">Trophy 6</h4>
+                <h5>Region : EU</h5>
+                <h5>Prize Pool: <br> $21,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6>May 12 - Jul 4</h6>
+                <p>Valorant Regional League East: Surge - Stage 2</p>
+            </div>
+        </a>
 
 
     </div>
-
-    <h3 class="tournaments-sub-header">past tournaments</h3>
+    <img src="Contents/img/news-valorant-msi-mga-dragon-cup-winter-2021-tournament-announced-3.webp"
+        alt="valorant-tornaments" class="img-header">
+    <h3 class="tournaments-sub-header">past events</h3>
 
 
 
     <div class="containercards">
+        <a href="https://www.vlr.gg/event/1023/project-v-weekly-tournament-2">
+            <div class="trophy-card">
+                <img src="Contents/img/trophies-logos/logo-trophy-7.png" class="gamingtrophy" alt="">
+                <h4 class="trophy-title">Ended Trophy 1</h4>
+                <h5>Region : EU</h5>
+                <h5>Prize Pool: <br> $1,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6 class="past-date">May 26 - May 27 (finished)</h6>
+                <p>Project V: Weekly Tournament 3</p>
+            </div>
+        </a>
+        <a href="https://www.vlr.gg/event/864/champions-tour-game-changers-asia-pacific-open-3">
+            <div class="trophy-card">
 
-        <div class="trophy-card">
-            <img src="Contents/img/trophies-logos/logo-trophy-7.png" class="gamingtrophy" alt="">
-            <h4 class="trophy-title">Trophy 1</h4>
-
-            <h5>City : London</h5>
-            <h5> Date: 21/7/22</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis aliquam temporibus id odio qui
-                dolorum veniam nemo mollitia quaerat nostrum dignissimos voluptatem nesciunt doloribus, dolore eligendi
-                similique fugit animi!</p>
-        </div>
-        <div class="trophy-card">
-
-            <img src="Contents/img/trophies-logos/logo-trophy-8.png" class="gamingtrophy" alt="">
-            <h4 class="trophy-title">Trophy 1</h4>
-            <h5>City : London</h5>
-            <h5> Date: 21/7/22</h5>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Esse omnis aliquam temporibus id odio qui
-                dolorum veniam nemo mollitia quaerat nostrum dignissimos voluptatem nesciunt doloribus, dolore eligendi
-                similique fugit animi!</p>
-        </div>
+                <img src="Contents/img/trophies-logos/logo-trophy-8.png" class="gamingtrophy" alt="">
+                <h4 class="trophy-title">Ended Trophy 2</h4>
+                <h5>Region : Asia</h5>
+                <h5>Prize Pool: <br> $5,000 USD</h5>
+                <h5> Dates:</h5>
+                <h6 class="past-date">Apr 30 - May 8 (finished)</h6>
+                <p>Champions Tour Game Changers Asia Pacific: Open 3</p>
+            </div>
+        </a>
 
 
 
