--- a/form.html
+++ b/form.html
@@ -405,7 +405,7 @@
         <div class="external-container-a">
          <div class="internal-container-a">
             <label class="form-item" for="hair-color">Hair</label>
-            <select name="hair" id="hair">
+            <select name="hair" id="hair" required>
                 <option value="black" class="color-input">Black</option>
                 <option value="blonde" class="color-input">Blonde</option>
                 <option value="brown" class="color-input">Brown</option>
@@ -417,7 +417,7 @@
         </div>
         <div class="external-container-a">
         <div class="internal-container-a">
-            <label class="form-item" for="eye-color">Eyes</label>
+            <label class="form-item" for="eye-color" required>Eyes</label>
             <select name="eye" id="eye">
                 <option value="black" class="color-input">Black</option>
                 <option value="brown" class="color-input">Brown</option>
@@ -429,7 +429,7 @@
         </div>
         <div class="external-container-a">
         <div class="internal-container-a">
-            <label for="tournament">Desired tournament</label>
+            <label for="tournament" required>Desired tournament</label>
             <select name="tournament" id="tournament" class="tournament">
                 <option value="tournament1" class="tournament-item">tournament1</option>
                 <option value="tournament2" class="tournament-item">tournament2</option>
@@ -448,16 +448,16 @@
         <div class="external-container-a">
         <div class="internal-container-a">
             <div class="other-games">
-                <label for="other-games" name="other-games" id="other-games">RIOT games</label><br>
-                <input type="radio" id="league-of-legend" name="fav_language" value="league-of-legend">
+                <label for="other-games" name="other-games" id="other-games" required>RIOT games</label><br>
+                <input type="checkbox" id="league-of-legend" name="other-games" value="league-of-legend">
                 <label for="league-of-legend">League Of Legend</label><br>
-                <input type="radio" id="teamfight-tactics" name="fav_language" value="teamfight-tactics">
+                <input type="checkbox" id="teamfight-tactics" name="other-games" value="teamfight-tactics">
                 <label for="teamfight-tactics">Teamfight Tactics</label><br>
-                <input type="radio" id="legends-of-runeterra" name="fav_language" value="legends-of-runeterra">
+                <input type="checkbox" id="legends-of-runeterra" name="other-games" value="legends-of-runeterra">
                 <label for="legends-of-runeterra">Legends Of Runeterra</label><br>
-                <input type="radio" id="lol-wild-rift" name="fav_language" value="lol-wild-rift">
+                <input type="checkbox" id="lol-wild-rift" name="other-games" value="lol-wild-rift">
                 <label for="lol-wild-rift">LOL: Wild Rift</label><br>
-                <input type="radio" id="not-picked" name="fav_language" value="not-picked">
+                <input type="checkbox" id="not-picked" name="other-games" value="not-picked">
                 <label for="not-picked">None</label><br>
                 <a target="_blank" href="https://www.riotgames.com/en">
                     <h3>Do you like any other 
