--- a/players.html
+++ b/players.html
@@ -80,7 +80,7 @@
             alt="selected player profile image"
             id="player-info-pfp"
           />
-          <p>Name: <span id="player-info-name">eeeee</span></p>
+          <p>Name: <span id="player-info-name"></span></p>
           <div class="player-info-inline">
             <p>Tag: <span id="player-info-code"></span></p>
             <img src="" alt="player nationality" id="player-info-nationality" />
