final desktop player page

--- a/players.html
+++ b/players.html
@@ -85,11 +85,11 @@
             <p>Tag: <span id="player-info-code"></span></p>
             <img src="" alt="player nationality" id="player-info-nationality" />
           </div>
-          <p>Bio:</p>
+          <p id="bio-label">Bio:</p>
           <p id="player-info-bio"></p>
           <p>Age: <span id="player-info-age"></span></p>
           <p>Years of experience: <span id="player-info-experience"></span></p>
-          <p>Latest tournaments:</p>
+          <p id="tournaments-label">Latest tournaments:</p>
           <ul>
             <li class="player-info-tournament"></li>
             <li class="player-info-tournament"></li>
