--- a/form.html
+++ b/form.html
@@ -37,8 +37,6 @@
     
 <body>
      <!-- HEADER -->
-
-    <!-- HEADER -->
     
     <div class="header">
         <div class="logo-left"> <img src="./Contents/img/logo-red-white.png" alt="logo-left"></div>
@@ -66,6 +64,8 @@
         </div>
     </div>
 
+    <!-- FORM INTRO-->
+
 <main>
     <div class="form-intro">
         <h2 class="normal-text">REGISTER <span class="normal-text">NOW</span></h2>
@@ -77,6 +77,9 @@
                 On first registration you can choose for one tournament only.
             </p>
     </div>
+
+    <!-- FORM -->
+
 <form method="post" action="./form.php" class="form-container" id="form">
     <div class="form-container">
         <div class="external-container-a">
@@ -130,13 +133,13 @@
         <div class="external-container-a">
         <div class="internal-container-a">
             <label class="form-item" for="address">Address</label>
-            <input type="text" name="address" id="address" placeholder="Enter your address..." maxlenght="50">
+            <input type="text" name="address" id="address" placeholder="Enter your address..." maxlenght="50" pattern="[a-zA-Z0-9\s]+(\.)?">
         </div>
         </div>
         <div class="external-container-a">
         <div class="internal-container-a">
             <label for="country">Country</label>
-                <select id="country" name="country" value="" required>
+                <select id="country" name="country" value="country" pattern="^[a-zA-Z]+$" required>
                     <option value="Afganistan">Afghanistan</option>
                     <option value="Albania">Albania</option>
                     <option value="Algeria">Algeria</option>
@@ -389,7 +392,7 @@
         <div class="external-container-a">
         <div class="internal-container-a">
             <label class="form-item" for="age">Date of birth</label>
-            <input type="text" id="age" name="age" value="" placeholder="DD/MM/YYYY" required>
+            <input type="text" id="age" name="age" value="" placeholder="DD/MM/YYYY" pattern="[0-9]{1,2}/[0-9]{1,2}/[0-9]{4}" required>
         </div>
         </div>
         <div class="external-container-a">
@@ -405,7 +408,7 @@
         <div class="external-container-a">
          <div class="internal-container-a">
             <label class="form-item" for="hair-color">Hair</label>
-            <select name="hair" id="hair" required>
+            <select name="hair-color" id="hair-color" required>
                 <option value="black" class="color-input">Black</option>
                 <option value="blonde" class="color-input">Blonde</option>
                 <option value="brown" class="color-input">Brown</option>
@@ -418,7 +421,7 @@
         <div class="external-container-a">
         <div class="internal-container-a">
             <label class="form-item" for="eye-color" required>Eyes</label>
-            <select name="eye" id="eye">
+            <select name="eye-color" id="eye-color">
                 <option value="black" class="color-input">Black</option>
                 <option value="brown" class="color-input">Brown</option>
                 <option value="green" class="color-input">Green</option>
@@ -431,12 +434,12 @@
         <div class="internal-container-a">
             <label for="tournament" required>Desired tournament</label>
             <select name="tournament" id="tournament" class="tournament">
-                <option value="tournament1" class="tournament-item">tournament1</option>
-                <option value="tournament2" class="tournament-item">tournament2</option>
-                <option value="tournament3" class="tournament-item">tournament3</option>
-                <option value="tournament4" class="tournament-item">tournament4</option>
-                <option value="tournament5" class="tournament-item">tournament5</option>                    
-                <option value="tournament6" class="tournament-item">tournament6</option>
+                <option name="tournament" value="tournament1" class="tournament-item">tournament1</option>
+                <option name="tournament" value="tournament2" class="tournament-item">tournament2</option>
+                <option name="tournament" value="tournament3" class="tournament-item">tournament3</option>
+                <option name="tournament" value="tournament4" class="tournament-item">tournament4</option>
+                <option name="tournament" value="tournament5" class="tournament-item">tournament5</option>                    
+                <option name="tournament" value="tournament6" class="tournament-item">tournament6</option>
             </select>
             <div>
                 <a target="_blank" href="./tournaments.html">
@@ -444,7 +447,7 @@
                 </a>    
             </div>
         </div>
-        </div>
+        </div> -->
         <div class="external-container-a">
         <div class="internal-container-a">
             <div class="other-games">
@@ -459,7 +462,7 @@
                 <label for="lol-wild-rift">LOL: Wild Rift</label><br>
                 <input type="checkbox" id="not-picked" name="other-games" value="not-picked">
                 <label for="not-picked">None</label><br>
-                <a target="_blank" href="https://www.riotgames.com/en">
+                <a  class="riot-link"target="_blank" href="https://www.riotgames.com/en">
                     <h3>Do you like any other 
                         <span id="riot-link">RIOT</span>
                          games? Check out here...
@@ -470,14 +473,12 @@
         </div>
         <div class="external-container-a">
         <div class="internal-container-a">
-            <label for="bio">Bio</label>
-            <textarea name="bio" id="bio" cols="50" rows="10" placeholder="(max 255 characters)" maxlength="255"></textarea>></textarea> 
+            <label for="bio" class="bio">Bio</label>
+            <textarea name="bio" id="bio" cols="50" rows="10" placeholder="(max 255 characters)" maxlength="255" required></textarea> 
         </div>
         </div>
             <button class="form-button" type="reset" form="form" value="Reset">Reset</button> 
             <button class="form-button" type="submit" form="form" value="Submit">Submit</button>
-
-
         </div>
 </form>
 
