--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
         <div class="about-us">
           <div class="team-levelup">
             <h2>OUR TEAM</h2>
-            <p><a href="https://github.com/furenshi" target="_blank">Abrate Francesco</a></p>
+            <p><a href="https://github.com/furenshi" target="_blank">Francesco Abrate</a></p>
             <p><a href="https://github.com/EloiseBGiorda" target="_blank">Eloise Bryony Giorda</a></p>
             <p><a href="https://github.com/dmurro" target="_blank">Davide Murroni</a></p>
             <p><a href="https://github.com/KelosDev" target="_blank">Giampietro Piras</a></p>
