added content to readme

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
     <h2>TEAMS</h2>
 
     <a href="./players.html">
-      <img src="./teams.jpg" alt="" srcset="" />
+      <img src="/Contents/img/teams.jpg" alt="" srcset="" />
       <h3>Meet our HEROES</h3>
     </a>
   </section>
