add css documentation

--- a/gallery.html
+++ b/gallery.html
@@ -73,6 +73,9 @@
     <h2 class="gallery-title">GALLERY</h2>
 
     <div class="gallery">
+
+        <!-- MASTERS SEMIFINALS 2022 -->
+
         <figure>
             <img src="./Contents/img/gallery img/Masters_Semifinals_2022 (1).jpg">
             <figcaption>Masters Semifinals 2022</figcaption>
@@ -149,6 +152,9 @@
             <img src="./Contents/img/gallery img/Masters_Semifinals_2022 (19).jpg">
             <figcaption>Masters Semifinals 2022</figcaption>
         </figure>
+
+        <!-- MASTER LOWERFINALS 2022 -->
+
         <figure>
             <img src="./Contents/img/gallery img/Masters_LowerFinals_2022 (1).jpg">
             <figcaption>Masters LowerFinals 2022</figcaption>
@@ -205,6 +211,9 @@
             <img src="./Contents/img/gallery img/Masters_LowerFinals_2022 (14).jpg">
             <figcaption>Masters LowerFinals 2022</figcaption>
         </figure>
+
+        <!-- MASTER GRANDFINALS 2022 -->
+
         <figure>
             <img src="./Contents/img/gallery img/Masters_GrandFinals_2022 (1).jpg">
             <figcaption>Masters GrandFinals 2022</figcaption>
@@ -281,6 +290,9 @@
             <img src="./Contents/img/gallery img/Masters_GrandFinals_2022 (19).jpg">
             <figcaption>Masters GrandFinals 2022</figcaption>
         </figure>
+
+        <!-- CHAMPIONS TOUR FINALS 2021 -->
+
         <figure>
             <img src="./Contents/img/gallery img/Champions_Tour_Finals_2021 (1).jpg">
             <figcaption>Champions Tour Finals 2021</figcaption>
@@ -341,6 +353,9 @@
             <img src="./Contents/img/gallery img/Champions_Tour_Finals_2021 (15).jpg">
             <figcaption>Champions Tour Finals 2021</figcaption>
         </figure>
+
+        <!-- STAGE 3 MASTERS GRANDFINALS 2021 -->
+
         <figure>
             <img src="./Contents/img/gallery img/Stage3_Masters_GrandFinals_2021 (1).jpg">
             <figcaption>S3 Masters GrandFinals 2021</figcaption>
@@ -365,6 +380,9 @@
             <img src="./Contents/img/gallery img/Stage3_Masters_GrandFinals_2021 (6).jpg">
             <figcaption>S3 Masters GrandFinals 2021</figcaption>
         </figure>
+
+        <!-- STAGE 2 MASTER GRANDFINALS 2021 -->
+        
         <figure>
             <img src="./Contents/img/gallery img/Stage3_Masters_GrandFinals_2021 (7).jpg">
             <figcaption>S2 Masters GrandFinals 2021</figcaption>
