fixed footer on form.html

--- a/form.html
+++ b/form.html
@@ -443,12 +443,12 @@
                     <div class="internal-container-a">
                         <label for="tournament" required>Desired tournament</label>
                         <select name="tournament" id="tournament" class="tournament">
-                            <option name="tournament" value="tournament1" class="tournament-item">tournament1</option>
-                            <option name="tournament" value="tournament2" class="tournament-item">tournament2</option>
-                            <option name="tournament" value="tournament3" class="tournament-item">tournament3</option>
-                            <option name="tournament" value="tournament4" class="tournament-item">tournament4</option>
-                            <option name="tournament" value="tournament5" class="tournament-item">tournament5</option>
-                            <option name="tournament" value="tournament6" class="tournament-item">tournament6</option>
+                            <option name="tournament" value="tournament1" class="tournament-item">Champions Tour North America</option>
+                            <option name="tournament" value="tournament2" class="tournament-item">Valorant Regional League DACH: Evolution</option>
+                            <option name="tournament" value="tournament3" class="tournament-item">Valorant Regional League Turkey: Birlik</option>
+                            <option name="tournament" value="tournament4" class="tournament-item">Valorant Regional League Spain: Rising </option>
+                            <option name="tournament" value="tournament5" class="tournament-item">Valorant Regional League Northern Europe: Polaris</option>
+                            <option name="tournament" value="tournament6" class="tournament-item">Valorant Regional League East: Surge</option>
                         </select>
                         <div>
                             <a target="_blank" href="./tournaments.html">
