fixed colors in news.html / standardized colors

--- a/news.html
+++ b/news.html
@@ -30,8 +30,7 @@
         rel="stylesheet">
 
 
-
-        <link rel="stylesheet" href="./style/style.css">
+        <link rel="stylesheet" href="./Style/style.css">
         <link rel="stylesheet" href="./Style/news.css">
     <title>Valorant Esport</title>
 </head>
@@ -67,9 +66,6 @@
 
 
     <!-- Articles -->
-
-
-
 
     <section class="articles-section">
 
