bugfix on form.html

--- a/form.html
+++ b/form.html
@@ -80,7 +80,7 @@
 
         <!-- FORM -->
 
-        <form method="post" action="./form.php" class="form-container" id="form">
+        <form method="post" action="./form.php" class="form-container" id="form" name="form">
             <div class="form-container">
                 <div class="external-container-a">
                     <div class="internal-container-a">
@@ -443,12 +443,12 @@
                     <div class="internal-container-a">
                         <label for="tournament" required>Desired tournament</label>
                         <select name="tournament" id="tournament" class="tournament">
-                            <option name="tournament" value="tournament1" class="tournament-item">Champions Tour North America</option>
-                            <option name="tournament" value="tournament2" class="tournament-item">Valorant Regional League DACH: Evolution</option>
-                            <option name="tournament" value="tournament3" class="tournament-item">Valorant Regional League Turkey: Birlik</option>
-                            <option name="tournament" value="tournament4" class="tournament-item">Valorant Regional League Spain: Rising </option>
-                            <option name="tournament" value="tournament5" class="tournament-item">Valorant Regional League Northern Europe: Polaris</option>
-                            <option name="tournament" value="tournament6" class="tournament-item">Valorant Regional League East: Surge</option>
+                            <option name="tournament" value="Champions Tour North America" class="tournament-item">Champions Tour North America</option>
+                            <option name="tournament" value="Valorant Regional League DACH: Evolution" class="tournament-item">Valorant Regional League DACH: Evolution</option>
+                            <option name="tournament" value="Valorant Regional League Turkey: Birlik" class="tournament-item">Valorant Regional League Turkey: Birlik</option>
+                            <option name="tournament" value="Valorant Regional League Spain: Rising" class="tournament-item">Valorant Regional League Spain: Rising</option>
+                            <option name="tournament" value="Valorant Regional League Northern Europe: Polaris" class="tournament-item">Valorant Regional League Northern Europe: Polaris</option>
+                            <option name="tournament" value="Valorant Regional League East: Surge" class="tournament-item">Valorant Regional League East: Surge</option>
                         </select>
                         <div>
                             <a target="_blank" href="./tournaments.html">
