--- a/news.html
+++ b/news.html
@@ -29,7 +29,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700;900&display=swap"
         rel="stylesheet">
 
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="./Contents/img/favicon.ico">
 
+    <!-- styles -->
         <link rel="stylesheet" href="./Style/style.css">
         <link rel="stylesheet" href="./Style/news.css">
     <title>Valorant Esport</title>
