--- a/tournaments.html
+++ b/tournaments.html
@@ -11,6 +11,11 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" /> <!-- RESET CSS -->
 
     <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet">
+    
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="./Contents/img/favicon.ico">
+
+    <!-- styles -->
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/tournaments.css">
 
