--- a/players.html
+++ b/players.html
@@ -15,6 +15,11 @@
     <!-- RESET CSS -->
 
     <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet" />
+    
+    <!-- favicon -->
+    <link rel="icon" type="image/x-icon" href="./Contents/img/favicon.ico">
+
+    <!-- styles -->
     <link rel="stylesheet" href="./Style/style.css" />
     <link rel="stylesheet" href="./Style/players.css" />
 
