furthermore fixes to player files

--- a/players.html
+++ b/players.html
@@ -1,21 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- BEGINNING OF HEAD-->
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="LevelUp - A Valorant esports and tournament site" />
+    <meta name="author"
+      content="Abrate Francesco, Eloise Bryony Giorda, Davide Murroni Giampietro Piras, Federico Stroppiana" />
 
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css"
       integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw=="
-      crossorigin="anonymous"
-      referrerpolicy="no-referrer"
-    />
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
     <!-- RESET CSS -->
 
     <link href="http://fonts.cdnfonts.com/css/valorant" rel="stylesheet" />
-    
+    <!-- gaming font -->
+
+    <!-- title font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Inter&display=swap" rel="stylesheet" />
+
+    <!-- body font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@500&display=swap" rel="stylesheet" />
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;700;900&display=swap"
+    rel="stylesheet" />
+
     <!-- favicon -->
     <link rel="icon" type="image/x-icon" href="./Contents/img/favicon.ico">
 
@@ -24,9 +41,11 @@
     <link rel="stylesheet" href="./Style/players.css" />
 
     <title>Valorant Esport</title>
+    <!-- END OF HEAD-->
   </head>
 
   <body>
+    <!-- BEGINNING OF BODY -->
     <!-- HEADER -->
 
     <div class="header">
@@ -135,7 +154,7 @@
         <ul class="teams"></ul>
       </section>
     </main>
-  <!-- footer -->
+  <!-- FOOTER -->
   
   <footer>
     <div class="footer-container">
@@ -203,10 +222,10 @@
       </div>
     </footer>
   
+  <!--END OF BODY-->
 
   <!--SCRIPTS-->
     <script src="./scripts/main.js"></script>
     <script src="./scripts/players.js"></script>
-    <!--END OF BODY-->
   </body>
 </html>
