--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
     <h2>TEAMS</h2>
 
     <a href="./players.html">
-      <img src="/Contents/img/teams.jpg" alt="" srcset="" />
+      <img src="./Contents/img/players.jpg" alt="" srcset="" />
       <h3>Meet our HEROES</h3>
     </a>
   </section>
