added secondary navigation to players page and start to new ReadMe markdown file

--- a/players.html
+++ b/players.html
@@ -92,6 +92,7 @@
     <!-- PAGE CONTENT-->
     <section class="page-header">
       <h1>TEAMS AND PLAYERS</h1>
+      <p class="players-introduction">Find out about our <a href="#active">ACTIVE</a> and <a href="#retired">RETIRED</a> teams!</p>
     </section>
     <main>
       <!--SELECTED PLAYER INFORMATION-->
@@ -141,14 +142,14 @@
       </section>
       <!--ACTIVE TEAMS-->
       <div class="category-subtitle">
-        <h2 id="active">ACTIVE TEAMS</h2>
+        <h2 id="active" name="active">ACTIVE TEAMS</h2>
       </div>
       <section class="active-players">
         <ul class="teams"></ul>
       </section>
       <!--RETIRED TEAMS-->
       <div class="category-subtitle">
-        <h2 id="retired">RETIRED TEAMS</h2>
+        <h2 id="retired" name="retired">RETIRED TEAMS</h2>
       </div>
       <section class="retired-players">
         <ul class="teams"></ul>
